--- a/module-user/src/main/res/layout/user_fragment_layout.xml
+++ b/module-user/src/main/res/layout/user_fragment_layout.xml
@@ -4,6 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
+        <variable
+            name="userVm"
+            type="com.yzg.user.UserViewModel" />
 
     </data>
 
@@ -69,6 +73,7 @@
             <RelativeLayout
                 android:id="@+id/rl_no"
                 android:layout_width="match_parent"
+                android:visibility="@{userVm.isLoginLivedata?View.GONE:View.VISIBLE, default=visible}"
                 android:layout_height="152dp"
                 android:layout_margin="14dp"
                 android:background="@drawable/user_select_bg"
@@ -82,7 +87,6 @@
                     android:layout_marginTop="17dp"
                     android:layout_marginRight="23dp"
                     android:src="@drawable/user_head" />
-
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -110,7 +114,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="152dp"
                 android:layout_margin="14dp"
-                android:visibility="gone"
+                android:visibility="@{userVm.isLoginLivedata?View.VISIBLE:View.GONE , default = gone}"
                 android:background="@drawable/user_select_bg"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -226,10 +230,11 @@
                 android:id="@+id/rl_subscrible"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
-                android:visibility="gone"
                 android:background="@color/common_colorWhite"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
+                android:visibility="@{userVm.isLoginLivedata?View.VISIBLE:View.GONE, default=gone}"
+
                 android:paddingLeft="12dp"
                 android:paddingRight="16dp">
 
@@ -258,7 +263,7 @@
                 android:id="@+id/view_subscrible"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:visibility="gone"
+                android:visibility="@{userVm.isLoginLivedata?View.VISIBLE:View.GONE, default=gone}"
                 android:layout_marginLeft="45dp"
                 android:background="#f2f2f4" />
 
