--- a/module-home/src/main/res/layout/home_fragment_main.xml
+++ b/module-home/src/main/res/layout/home_fragment_main.xml
@@ -80,7 +80,7 @@
 
                     <com.zhpan.bannerview.BannerViewPager
                         android:id="@+id/bv_top"
-                        initBannerView="@{HomeVM.banners}"
+                        initBannerView1="@{HomeVM.banners}"
                         android:layout_width="match_parent"
                         android:layout_height="130dp"
                         app:bvp_indicator_checked_color="@android:color/holo_red_dark"
