--- a/module-home/src/main/res/layout/home_fragment_main.xml
+++ b/module-home/src/main/res/layout/home_fragment_main.xml
@@ -21,6 +21,7 @@
 
 
             <androidx.core.widget.NestedScrollView
+                android:overScrollMode="never"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -382,6 +383,7 @@
                         android:id="@+id/rv_category_view"
                         android:layout_width="match_parent"
                         android:layout_height="198dp"
+                        android:overScrollMode="never"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp" />
