--- a/library-common/src/main/res/values/common_colors.xml
+++ b/library-common/src/main/res/values/common_colors.xml
@@ -5,6 +5,7 @@
     <color name="common_small_text1">#888888</color>
     <color name="common_color_blue">#5790da</color>
     <color name="common_color_text_gray">#656565</color>
+    <color name="common_color_gray">#ff888888</color>
     <color name="common_colorWhite">#FFFFFF</color>
     <color name="common_color_title_text">#222222</color>
     <color name="common_color_unselect_text">@android:color/darker_gray</color>
