积利银条详情

--- a/module-home/src/main/res/layout/home_activity_jlyt_detail.xml
+++ b/module-home/src/main/res/layout/home_activity_jlyt_detail.xml
@@ -554,6 +554,7 @@
                 android:layout_alignRight="@id/view1"
                 android:layout_toRightOf="@id/tv1"
                 android:hint="数量"
+                android:inputType="number"
                 android:background="@null"/>
 
             <TextView
