--- a/moudle-deal/src/main/res/layout/deal_activity_main.xml
+++ b/moudle-deal/src/main/res/layout/deal_activity_main.xml
@@ -34,13 +34,21 @@
         </RelativeLayout>
 
 
+
         <TextView
+            android:layout_width="60dp"
+            android:layout_height="26dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="6dp"
             android:id="@+id/tv_test"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="支付"
             app:layout_constraintTop_toBottomOf="@id/rl_title"
-            android:padding="50dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:text="支付"
+            android:background="@drawable/home_r5_subs_bg"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="11dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
