--- a/module-home/src/main/res/layout/home_activity_jlyt_detail.xml
+++ b/module-home/src/main/res/layout/home_activity_jlyt_detail.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -39,6 +38,72 @@
             android:layout_marginTop="7dp"
             android:background="@color/common_color_main"
             app:layout_constraintTop_toBottomOf="@id/rl_title" />
+        <RelativeLayout
+            android:id="@+id/rl_bottom"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:paddingRight="11dp"
+            android:paddingLeft="26dp"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/tv1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="买"
+                android:layout_centerVertical="true"
+                />
+
+            <View
+                android:id="@+id/view1"
+                android:layout_width="60dp"
+                android:layout_height="1.5dp"
+                android:layout_toRightOf="@id/tv1"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/common_color_main"/>
+
+
+
+            <EditText
+                android:id="@+id/et_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignLeft="@id/view1"
+                android:gravity="center"
+                android:layout_alignRight="@id/view1"
+                android:layout_toRightOf="@id/tv1"
+                android:hint="数量"
+                android:maxLength="5"
+                android:singleLine="true"
+                android:inputType="number"
+                android:background="@null"/>
+
+            <TextView
+                android:id="@+id/tv_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="克"
+                android:layout_toRightOf="@id/view1"
+                android:layout_centerVertical="true"/>
+
+            <TextView
+                android:id="@+id/tv_buy"
+                android:layout_width="190dp"
+                android:layout_height="42dp"
+                android:text="购买"
+                android:textColor="@color/white"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/home_r5_buy_bg"/>
+
+        </RelativeLayout>
 
       <androidx.core.widget.NestedScrollView
           android:id="@+id/nest"
@@ -514,68 +579,7 @@
 
           </LinearLayout>
       </androidx.core.widget.NestedScrollView>
-        <RelativeLayout
-            android:id="@+id/rl_bottom"
-            android:background="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            android:paddingRight="11dp"
-            android:paddingLeft="26dp"
-            android:orientation="horizontal">
 
-
-            <TextView
-                android:id="@+id/tv1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="买"
-                android:layout_centerVertical="true"
-              />
-
-            <View
-                android:id="@+id/view1"
-                android:layout_width="60dp"
-                android:layout_height="1.5dp"
-                android:layout_toRightOf="@id/tv1"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_alignParentBottom="true"
-                android:background="@color/common_color_main"/>
-
-
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_alignLeft="@id/view1"
-                android:gravity="center"
-                android:layout_alignRight="@id/view1"
-                android:layout_toRightOf="@id/tv1"
-                android:hint="数量"
-                android:inputType="number"
-                android:background="@null"/>
-
-            <TextView
-                android:id="@+id/tv_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="克"
-                android:layout_toRightOf="@id/view1"
-                android:layout_centerVertical="true"/>
-
-            <TextView
-                android:layout_width="190dp"
-                android:layout_height="42dp"
-                android:text="购买"
-                android:textColor="@color/white"
-                android:layout_centerVertical="true"
-                android:gravity="center"
-                android:layout_alignParentRight="true"
-                android:background="@drawable/home_r5_buy_bg"/>
-
-        </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <data>
