--- a/module-user/src/main/res/layout/user_activity_setting.xml
+++ b/module-user/src/main/res/layout/user_activity_setting.xml
@@ -45,69 +45,83 @@
             android:id="@+id/cl_main"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/white"
             android:layout_marginTop="10dp"
+            android:background="@color/white"
             app:layout_constraintTop_toBottomOf="@id/rl_title">
-
 
 
             <TextView
                 android:id="@+id/tv_tip_version"
-                app:layout_constraintTop_toTopOf="parent"
                 style="@style/user_seeting_item_bg"
                 android:layout_width="match_parent"
                 android:gravity="center_vertical"
-                android:text="版本检查" />
+                android:text="版本检查"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                app:layout_constraintTop_toTopOf="@id/tv_tip_version"
-                app:layout_constraintBottom_toBottomOf="@id/tv_tip_version"
-                app:layout_constraintRight_toRightOf="@id/tv_tip_version"
-                android:text="已是最新版本"
-                android:layout_marginRight="30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:layout_marginRight="30dp"
+                android:text="已是最新版本"
+                app:layout_constraintBottom_toBottomOf="@id/tv_tip_version"
+                app:layout_constraintRight_toRightOf="@id/tv_tip_version"
+                app:layout_constraintTop_toTopOf="@id/tv_tip_version" />
+
+            <View
+                android:id="@+id/view_line"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#f2f2f4"
+                app:layout_constraintTop_toBottomOf="@id/tv_tip_version" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintTop_toBottomOf="@id/view_line">
+
+                <TextView
+                    android:id="@+id/tv_address"
+                    style="@style/user_seeting_item_bg"
+                    android:layout_width="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="我的提货地址"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </LinearLayout>
 
 
+            <!--        <View-->
+            <!--            android:id="@+id/view_line_tel"-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="0.1dp"-->
+            <!--            android:background="#f2f2f4"-->
+            <!--            app:layout_constraintTop_toBottomOf="@id/tv_tip_tel" />-->
 
 
-
-
-
-<!--        <View-->
-<!--            android:id="@+id/view_line_tel"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="0.1dp"-->
-<!--            android:background="#f2f2f4"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/tv_tip_tel" />-->
-
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_regis"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="44dp"-->
-<!--            android:layout_margin="15dp"-->
-<!--            android:background="@drawable/user_shape_ic_login_bg"-->
-<!--            android:gravity="center"-->
-<!--            android:text="注册"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="14sp"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/view_line_pwd2" />-->
+            <!--        <TextView-->
+            <!--            android:id="@+id/tv_regis"-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="44dp"-->
+            <!--            android:layout_margin="15dp"-->
+            <!--            android:background="@drawable/user_shape_ic_login_bg"-->
+            <!--            android:gravity="center"-->
+            <!--            android:text="注册"-->
+            <!--            android:textColor="@color/white"-->
+            <!--            android:textSize="14sp"-->
+            <!--            app:layout_constraintTop_toBottomOf="@id/view_line_pwd2" />-->
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/tv_quit"
-            android:text="退出登录"
-            android:layout_marginTop="50dp"
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_marginTop="50dp"
             android:background="@color/white"
             android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@id/cl_main"
-            />
+            android:text="退出登录"
+            app:layout_constraintTop_toBottomOf="@id/cl_main" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
