--- a/moudle-deal/src/main/res/layout/deal_activity_main.xml
+++ b/moudle-deal/src/main/res/layout/deal_activity_main.xml
@@ -34,10 +34,174 @@
         </RelativeLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/rl_title"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:visibility="gone"
+                android:id="@+id/rl_address"
+                app:layout_constraintTop_toBottomOf="@id/rl_title"
+                android:layout_width="match_parent"
+                android:layout_height="65dp"
+                android:background="@color/white"
+                android:layout_marginTop="30dp"
+                android:paddingLeft="16dp"
+                android:paddingTop="2dp"
+                android:paddingRight="16dp"
+                android:paddingBottom="10dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/iv_local"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@mipmap/deal_local"
+                    android:layout_centerVertical="true"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_toRightOf="@id/iv_local"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="王富贵"
+                    android:textSize="14sp"
+                    android:textColor="@color/common_color_111111"/>
+
+                <TextView
+                    android:id="@+id/tv_tel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="15160001230"
+                    android:textSize="12sp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/tv_name"
+                    android:layout_alignBottom="@id/tv_name"
+                    android:layout_marginRight="15dp"
+                    android:textColor="@color/common_color_333333"/>
+                <TextView
+                    android:id="@+id/tv_address"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/iv_local"
+                    android:layout_marginLeft="10dp"
+                    android:layout_below="@id/tv_name"
+                    android:layout_marginTop="10dp"
+                    android:maxLines="2"
+                    android:text="安徽省 合肥市 北京路  朝阳科技工业园西区15栋 007号"
+                    android:textSize="12sp"
+                    android:textColor="@color/common_color_111111"/>
+
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/common_arrow_right"/>
+
+            </RelativeLayout>
+
+
+
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_main"
+                app:layout_constraintTop_toBottomOf="@id/rl_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginLeft="16dp">
+
+                <TextView
+                    android:id="@+id/tv_price_tip"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="今日银价:"
+                    android:textSize="14sp"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_price"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toRightOf="@id/tv_price_tip"
+                    android:layout_marginLeft="20dp"
+                    android:textSize="14sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3.65 克/元"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_money_tip"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_price_tip"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="购买金额:"
+                    android:textSize="14sp"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_money"
+                    app:layout_constraintTop_toBottomOf="@id/tv_price"
+                    app:layout_constraintLeft_toRightOf="@id/tv_money_tip"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:textSize="14sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0 元"
+                    />
+
+
+                <TextView
+                    android:id="@+id/tv_fe_tip"
+                    android:layout_marginTop="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_money"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="购买金额(克):"
+                    android:textSize="14sp"
+                    />
+
+                <EditText
+                    app:layout_constraintTop_toBottomOf="@id/tv_money"
+                    android:id="@+id/et_weight"
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="15dp"
+                    app:layout_constraintStart_toEndOf="@id/tv_fe_tip"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:gravity="center"
+                    android:background="@drawable/deal_r5_weight_bg"
+                    android:hint="20克起，1克递增"
+                    android:inputType="number"
+                    android:maxLength="5"
+                    android:textSize="12sp"
+                    />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+
+
+
+
+
 
         <TextView
-            android:layout_width="60dp"
-            android:layout_height="26dp"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="6dp"
             android:id="@+id/tv_test"
@@ -45,7 +209,7 @@
             app:layout_constraintTop_toBottomOf="@id/rl_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="支付"
+            android:text="确定"
             android:background="@drawable/home_r5_subs_bg"
             android:gravity="center"
             android:textColor="@color/white"
