--- a/module-home/src/main/res/layout/home_jlyt_item.xml
+++ b/module-home/src/main/res/layout/home_jlyt_item.xml
@@ -64,27 +64,28 @@
                 android:layout_centerVertical="true"/>
 
             <TextView
-                android:id="@+id/tv_rate"
-                android:layout_toLeftOf="@id/tv_detail"
-                android:text="4.35%"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:includeFontPadding="false"
-                android:textColor="@color/common_color_main"
-                android:layout_alignTop="@id/tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-
-            <TextView
+                android:id="@+id/tv_tip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignLeft="@id/tv_rate"
+                android:layout_toLeftOf="@id/tv_detail"
                 android:text="预计受益率"
                 android:textSize="12sp"
                 android:textColor="#969494"
                 android:layout_marginTop="6dp"
                 android:layout_below="@id/tv_rate"/>
+
+            <TextView
+                android:id="@+id/tv_rate"
+                android:layout_alignLeft="@id/tv_tip"
+                android:layout_alignRight="@id/tv_tip"
+                android:text="12%"
+                android:gravity="center_horizontal"
+                android:textSize="18sp"
+                android:includeFontPadding="false"
+                android:textColor="@color/common_color_main"
+                android:layout_alignTop="@id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
 
         </RelativeLayout>
