--- a/module-community/src/main/res/values/colors.xml
+++ b/module-community/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="community_green">#24B04B</color>
+    <color name="community_red">#FF4419</color>
 </resources>
