--- a/module-home/src/main/res/layout/home_fragment_main.xml
+++ b/module-home/src/main/res/layout/home_fragment_main.xml
@@ -205,6 +205,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/ll_quotation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="14dp"
