--- a/module-more/src/main/res/layout/more_fragment_more.xml
+++ b/module-more/src/main/res/layout/more_fragment_more.xml
@@ -60,10 +60,20 @@
         </LinearLayout>
 
 
+        <WebView
+            android:id="@+id/webview"
+            app:layout_constraintTop_toBottomOf="@id/constraintLayout"
+            android:layout_width="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="0dp"/>
+
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout1"
             android:layout_width="0dp"
             android:layout_height="50dp"
+            android:visibility="gone"
             android:background="@color/white"
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -92,6 +102,7 @@
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/vp_home_content"
             android:layout_width="0dp"
+            android:visibility="gone"
             android:layout_height="0dp"
             android:layout_marginTop="10dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
