商品列表接口调试

--- a/module-home/src/main/res/layout/home_fragment_main.xml
+++ b/module-home/src/main/res/layout/home_fragment_main.xml
@@ -204,6 +204,13 @@
 
                     </LinearLayout>
 
+
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rv_hq"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
                     <LinearLayout
                         android:id="@+id/ll_quotation"
                         android:layout_width="match_parent"
