--- a/module-home/src/main/res/layout/home_fragment_main.xml
+++ b/module-home/src/main/res/layout/home_fragment_main.xml
@@ -207,11 +207,18 @@
 
 
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv_hq"
+                        android:id="@+id/rv_market"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="14dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="14dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="#09000000"
+                        />
 
                     <LinearLayout
+                        android:visibility="gone"
                         android:id="@+id/ll_quotation"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
