--- a/module-community/src/main/res/layout/community_activity_quotation.xml
+++ b/module-community/src/main/res/layout/community_activity_quotation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="MissingDefaultResource">
 
@@ -10,7 +11,7 @@
             type="com.yzg.community.recommend.QuotationViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -114,13 +115,11 @@
                 android:textSize="12sp" />
 
 
-
-
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/tv_jj_price"
-                android:layout_marginRight="30dp">
+                android:layout_marginRight="29dp"
+                android:layout_toLeftOf="@id/tv_jj_price">
 
                 <TextView
                     android:id="@+id/tv_jk"
