假数据提交

--- a/module-home/src/main/res/layout/home_item_category_item_subject_card_view.xml
+++ b/module-home/src/main/res/layout/home_item_category_item_subject_card_view.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="1个月,100克起"
+            android:text="@{viewModel.title}"
             android:textColor="#333333"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="11dp"
-            android:text="拆借利率"
+            android:text="@{viewModel.actionUrl}"
             android:textColor="#999999"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
