1.banner图片修改 2.登录页面添加推荐人字段 3.买入和提货的最终金额保留两位小数； 4.首页激励银条数据更新; 5.积利银条详情页面数据更新 6.协议书更新；

--- a/module-home/src/main/res/layout/home_activity_jlyt_detail.xml
+++ b/module-home/src/main/res/layout/home_activity_jlyt_detail.xml
@@ -155,7 +155,6 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="10dp"
                         android:includeFontPadding="false"
-                        android:text="@{DetailVm.successData.getRate()+@string/home_rate}"
                         android:textColor="@color/common_color_main"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -227,6 +226,7 @@
                     android:text="中低风险"
                     android:textColor="@color/common_color_main"/>
                 <TextView
+                    android:id="@+id/tv_start"
                     android:layout_width="62dp"
                     android:layout_height="20dp"
                     android:layout_marginRight="12dp"
