--- a/module-user/src/main/res/layout/user_activity_login.xml
+++ b/module-user/src/main/res/layout/user_activity_login.xml
@@ -102,6 +102,34 @@
                 android:textSize="14sp" />
 
         </RelativeLayout>
+        <View
+            android:id="@+id/view_line1"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="#f2f2f4"
+            app:layout_constraintTop_toBottomOf="@id/rl_pwd" />
+
+        <RelativeLayout
+            android:id="@+id/rl_recommenderName"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="@color/white"
+            app:layout_constraintTop_toBottomOf="@id/view_line1">
+
+
+            <EditText
+                android:id="@+id/et_recommenderName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="55dp"
+                android:background="@color/white"
+                android:hint="请输入推荐人"
+                android:singleLine="true"
+                android:textColor="#111111"
+                android:textSize="14sp" />
+
+        </RelativeLayout>
 
 
         <TextView
@@ -114,7 +142,7 @@
             android:text="登录"
             android:textColor="@color/white"
             android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/rl_pwd" />
+            app:layout_constraintTop_toBottomOf="@id/rl_recommenderName" />
 
         <TextView
             android:id="@+id/tv_register"
