1.banner调整6个 2.积利银条列表及详情数据调整 3.登录密码和注册密码改为密文。

--- a/module-main/src/main/res/layout/main_activity_main.xml
+++ b/module-main/src/main/res/layout/main_activity_main.xml
@@ -29,6 +29,7 @@
 
                 <ImageView
                     android:id="@+id/iv_net_candle"
+                    android:visibility="gone"
                     android:layout_width="23dp"
                     android:layout_height="23dp"
                     android:scaleType="fitCenter"
@@ -50,6 +51,7 @@
 
                 <ImageView
                     android:id="@+id/iv_net_search"
+                    android:visibility="gone"
                     android:layout_width="23dp"
                     android:layout_height="23dp"
                     android:scaleType="fitCenter"
