--- a/module-user/src/main/res/layout/user_activity_register.xml
+++ b/module-user/src/main/res/layout/user_activity_register.xml
@@ -147,7 +147,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:hint="请输入密码"
-                android:inputType="number"
+                android:inputType="numberPassword"
                 android:maxLength="11"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
@@ -186,7 +186,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:hint="请再次输入密码"
-                android:inputType="number"
+                android:inputType="numberPassword"
                 android:maxLength="11"
                 android:paddingLeft="10dp"
                 android:paddingTop="15dp"
