--- a/module-community/src/main/res/layout/community_fragment_community.xml
+++ b/module-community/src/main/res/layout/community_fragment_community.xml
@@ -22,6 +22,7 @@
 
             <ImageView
                 android:id="@+id/iv_net_candle"
+                android:visibility="gone"
                 android:layout_width="23dp"
                 android:layout_height="23dp"
                 android:scaleType="fitCenter"
@@ -46,6 +47,7 @@
 
             <ImageView
                 android:id="@+id/iv_net_search"
+                android:visibility="gone"
                 android:layout_width="23dp"
                 android:layout_height="23dp"
                 android:scaleType="fitCenter"
