--- a/module-home/src/main/res/layout/home_fragment_home.xml
+++ b/module-home/src/main/res/layout/home_fragment_home.xml
@@ -22,6 +22,7 @@
 
             <ImageView
                 android:id="@+id/iv_net_candle"
+                android:visibility="gone"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="10dp"
@@ -48,6 +49,7 @@
 
             <ImageView
                 android:id="@+id/iv_net_search"
+                android:visibility="gone"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginEnd="10dp"
