--- a/module-home/src/main/res/layout/home_fragment_main.xml
+++ b/module-home/src/main/res/layout/home_fragment_main.xml
@@ -44,6 +44,7 @@
 
                         <ImageView
                             android:id="@+id/iv_net_candle"
+                            android:visibility="gone"
                             android:layout_width="23dp"
                             android:layout_height="23dp"
                             android:layout_centerVertical="true"
@@ -68,6 +69,7 @@
 
                         <ImageView
                             android:id="@+id/iv_net_search"
+                            android:visibility="gone"
                             android:layout_width="23dp"
                             android:layout_height="23dp"
                             android:layout_marginEnd="10dp"
