--- a/module-more/src/main/res/layout/more_fragment_more.xml
+++ b/module-more/src/main/res/layout/more_fragment_more.xml
@@ -24,6 +24,7 @@
 
             <ImageView
                 android:id="@+id/iv_net_candle"
+                android:visibility="gone"
                 android:layout_width="23dp"
                 android:layout_height="23dp"
                 android:layout_centerVertical="true"
@@ -48,6 +49,7 @@
 
             <ImageView
                 android:id="@+id/iv_net_search"
+                android:visibility="gone"
                 android:layout_width="23dp"
                 android:layout_height="23dp"
                 android:layout_marginEnd="10dp"
