--- a/module-user/src/main/res/layout/user_fragment_layout.xml
+++ b/module-user/src/main/res/layout/user_fragment_layout.xml
@@ -28,6 +28,7 @@
 
             <ImageView
                 android:id="@+id/iv_net_candle"
+                android:visibility="gone"
                 android:layout_width="23dp"
                 android:layout_height="23dp"
                 android:layout_centerVertical="true"
@@ -52,6 +53,7 @@
 
             <ImageView
                 android:id="@+id/iv_net_search"
+                android:visibility="gone"
                 android:layout_width="23dp"
                 android:layout_height="23dp"
                 android:layout_marginEnd="10dp"
