--- a/module-user/src/main/res/layout/user_activity_login.xml
+++ b/module-user/src/main/res/layout/user_activity_login.xml
@@ -114,6 +114,7 @@
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:background="@color/white"
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/view_line1">
 
 
