--- a/module-user/src/main/res/layout/user_activity_register.xml
+++ b/module-user/src/main/res/layout/user_activity_register.xml
@@ -198,12 +198,76 @@
                 app:layout_constraintStart_toEndOf="@id/tv_tip_pwd2"
                 app:layout_constraintTop_toTopOf="@id/tv_tip_pwd2" />
 
+
+            <View
+                android:id="@+id/view_re"
+                android:layout_width="match_parent"
+                android:layout_height="0.1dp"
+                android:background="#f2f2f4"
+                app:layout_constraintTop_toBottomOf="@id/tv_tip_pwd2" />
+
+
+            <TextView
+                android:id="@+id/tv_re"
+                android:layout_width="100dp"
+                android:paddingLeft="15dp"
+                android:gravity="center_vertical|left"
+                android:layout_height="45dp"
+                android:background="@color/white"
+                android:text="推荐人(选填)"
+                android:textColor="#111111"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/view_re" />
+
+            <EditText
+                android:id="@+id/et_recommenderName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:hint="推荐人"
+                android:inputType="numberPassword"
+                android:maxLength="11"
+                android:paddingLeft="10dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:textColor="#111111"
+                android:textSize="14sp"
+                app:layout_constraintBottom_toBottomOf="@id/tv_re"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tv_re"
+                app:layout_constraintTop_toTopOf="@id/tv_re" />
+
+
+
+            <!--            <RelativeLayout-->
+<!--                android:id="@+id/rl_recommenderName"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="45dp"-->
+<!--                android:background="@color/white"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/view_line1">-->
+
+
+<!--                <EditText-->
+<!--                    android:id="@+id/et_recommenderName"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_centerVertical="true"-->
+<!--                    android:layout_marginLeft="55dp"-->
+<!--                    android:background="@color/white"-->
+<!--                    android:hint="请输入推荐人(选填)"-->
+<!--                    android:singleLine="true"-->
+<!--                    android:textColor="#111111"-->
+<!--                    android:textSize="14sp" />-->
+
+<!--            </RelativeLayout>-->
+
             <View
                 android:id="@+id/view_line_pwd2"
                 android:layout_width="match_parent"
                 android:layout_height="0.1dp"
                 android:background="#f2f2f4"
-                app:layout_constraintTop_toBottomOf="@id/tv_tip_pwd2" />
+                app:layout_constraintTop_toBottomOf="@id/tv_re" />
 
         <TextView
             android:id="@+id/tv_regis"
