--- a/module-community/src/main/res/layout/community_activity_quotation.xml
+++ b/module-community/src/main/res/layout/community_activity_quotation.xml
@@ -197,21 +197,22 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rl_top">
 
-            <com.guannan.chartmodule.chart.MarketFigureChart
-                android:id="@+id/chart_container"
-                android:layout_width="match_parent"
-                android:visibility="gone"
-                android:layout_height="wrap_content" />
+<!--            <com.guannan.chartmodule.chart.MarketFigureChart-->
+<!--                android:id="@+id/chart_container"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:visibility="gone"-->
+<!--                android:layout_height="wrap_content" />-->
 
-            <ProgressBar
-                android:id="@+id/progress_circular"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:layout_gravity="center"/>
+<!--            <ProgressBar-->
+<!--                android:id="@+id/progress_circular"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:visibility="gone"-->
+<!--                android:layout_gravity="center"/>-->
 
             <com.vinsonguo.klinelib.chart.KLineView
                 android:id="@+id/kline"
