--- a/module-community/src/main/res/layout/community_activity_quotation.xml
+++ b/module-community/src/main/res/layout/community_activity_quotation.xml
@@ -198,6 +198,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:padding="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rl_top">
 
