--- a/module-user/src/main/res/layout/user_activity_address.xml
+++ b/module-user/src/main/res/layout/user_activity_address.xml
@@ -114,5 +114,18 @@
             android:overScrollMode="never"
             android:layout_height="wrap_content"/>
         </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+
+        <TextView
+            android:id="@+id/tv_add"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_margin="20dp"
+            android:background="@drawable/user_shape_ic_login_bg"
+            android:gravity="center"
+            android:text="添加地址"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
