--- a/module-user/src/main/res/layout/user_fragment_layout.xml
+++ b/module-user/src/main/res/layout/user_fragment_layout.xml
@@ -205,6 +205,7 @@
                         android:paddingTop="10dp"
                         android:paddingBottom="10dp"
                         android:text="卖出"
+                        android:visibility="invisible"
                         android:textColor="@color/common_colorWhite" />
 
                     <TextView
