--- a/moudle-deal/src/main/res/layout/deal_fragment_main.xml
+++ b/moudle-deal/src/main/res/layout/deal_fragment_main.xml
@@ -26,6 +26,7 @@
                 android:layout_width="23dp"
                 android:layout_height="23dp"
                 android:scaleType="fitCenter"
+                android:visibility="invisible"
                 android:layout_marginStart="10dp"
                 android:layout_centerVertical="true"
                 android:background="@drawable/common_messaage"
@@ -51,6 +52,7 @@
                 android:layout_height="23dp"
                 android:scaleType="fitCenter"
                 android:layout_marginEnd="10dp"
+                android:visibility="gone"
                 android:background="@drawable/service"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
