--- a/module-user/src/main/res/layout/user_activity_account.xml
+++ b/module-user/src/main/res/layout/user_activity_account.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
@@ -97,7 +96,9 @@
             android:id="@+id/rv_jlyt"
             app:layout_constraintTop_toBottomOf="@id/ll_header"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="0dp"
+            android:paddingBottom="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 <!--        <com.scwang.smart.refresh.layout.SmartRefreshLayout-->
 <!--            android:id="@+id/refreshLayout"-->
 <!--            app:layout_constraintBottom_toBottomOf="parent"-->
